--- a/CSS-Flexbox-FF7與棋盤/ff7/index.html
+++ b/CSS-Flexbox-FF7與棋盤/ff7/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>ff7</title>
   <style>
     * {
       margin: 0;
@@ -15,10 +15,11 @@
     body {
       width: 100%;
       height: 100vh;
-      background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/bg-full.jpg);
+      background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 60%, rgba(0, 0, 0, 0.9) 80%, rgba(0, 0, 0, 1)), url(./images/bg-full.jpg);
       display: flex;
       justify-content: center;
       align-items: center;
+      font-family: 'Arial';
     }
 
     #box {
@@ -26,6 +27,8 @@
       height: 80%;
       /* background-color: yellowgreen; */
       display: flex;
+      border: 1px solid #333;
+      box-shadow: 0 0 10px #000;
     }
 
     #box_L {
@@ -48,6 +51,7 @@
 
     #box_L img {
       width: 35%;
+      margin-bottom: 20px;
     }
 
 
@@ -73,7 +77,7 @@
     #top {
       width: 100%;
       height: 50%;
-      background-color: rgb(206, 206, 206);
+      background-color: rgb(175, 175, 175);
       display: flex;
       padding-left: 30px;
       padding-right: 3px;
