棋盤更新、作業說明更新

--- a/CSS-Flexbox-FF7與棋盤/chess/index.html
+++ b/CSS-Flexbox-FF7與棋盤/chess/index.html
@@ -33,20 +33,17 @@
 
     .wordBox {
       /* border: 1px solid red; */
-      padding-top: 1.5%;
+      padding-top: 3.5%;
       height: 100%;
       width: 4.5%;
       display: flex;
-      justify-content: center;
+      align-items: center;
+      /* flex-direction: column; */
+      writing-mode: vertical-lr;
+      font-size: 2.35rem;
+
     }
 
-
-    pre {
-      /* background-color: yellowgreen; */
-      width: 100%;
-      font-size: 2rem;
-      font-family: '標楷體';
-    }
 
     #chess {
       width: 84%;
@@ -215,28 +212,7 @@
   <!-- 最外圍 -->
   <div id="content">
     <div class="wordBox">
-      <pre>
-棋
-盤
-裡
-，
-車
-無
-輪
-，
-馬
-無
-韁
-，
-叫
-聲
-將
-軍
-提
-防
-提
-防
-      </pre>
+      <p>棋盤裡，車無輪，馬無韁，叫聲將軍提防提防</p>
     </div>
 
     <div id="chess">
@@ -500,27 +476,7 @@
 
 
     <div class="wordBox">
-      <pre>
-圖
-畫
-裡
-，
-龍
-不
-吟
-，
-虎
-不
-嘯
-，
-小
-小
-書
-僮
-可
-笑
-可
-笑</pre>
+      <p>圖畫裡，龍不吟，虎不嘯，小小書僮可笑可笑</p>
     </div>
 
   </div>
